<resources>
    <string name="app_name">PlayAndroid</string>

    <!--common-->
    <string name="common_network_error">网络错误</string>
    <string name="common_token_invalid">Token失效</string>
    <string name="common_request_failed">请求失败</string>
    <string name="common_parse_error">解析错误</string>
    <string name="common_connection_failed">连接失败</string>
    <string name="common_network_dismiss">网络未连接</string>
    <string name="common_response_timeout">服务器响应超时</string>
    <string name="common_server_error">服务器出错</string>
    <string name="common_exit_app">再按一次退出APP</string>
    <string name="common_cancel">取消</string>
    <string name="common_ok">确定</string>
    <string name="common_delete">删除</string>
    <string name="common_please_login">请先登录</string>

    <!--文章详情-->
    <string name="article_collect">收藏</string>
    <string name="article_had_collect">已收藏</string>
    <string name="article_share">分享</string>
    <string name="article_open_browser">用浏览器打开</string>
    <string name="article_collect_success">收藏成功</string>
    <string name="article_un_collect_success">已取消收藏</string>

    <!--main-->
    <string name="main_home">首页</string>
    <string name="main_project_recommend">项目</string>
    <string name="main_public_recommend">公众号</string>
    <string name="main_project_system">体系</string>
    <string name="main_user">我的</string>

    <!--首页-->
    <string name="home">首页</string>

    <!--公众号-->
    <string name="public_title">公众号推荐</string>
    <string name="official_account_click_to_search">点击搜索历史文章</string>

    <!--我的-->
    <string name="user_not_login">未登录玩安卓</string>
    <string name="user_click_to_login">点击头像立即登录</string>
    <string name="user_account">账户管理</string>
    <string name="user_setting">系统设置</string>
    <string name="user_about_us">关于我们</string>
    <string name="user_share_software">推荐好友</string>
    <string name="user_no_signature">还没有设置个性签名哦~</string>

    <!-- share -->
    <string name="share_title">分享到</string>
    <string name="share_type_title">Share Project</string>
    <string name="share_article_url">%1$s Share【%2$s】：%3$s</string>
    <string name="share_type_url">%1$s Share【%2$s】Project：http://www.wanandroid.com/article/list/0?cid=%3$d</string>

    <!--登录，注册-->
    <string name="login_input_username">请输入用户名</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_go_to_register">没有账号？立即注册</string>

    <!--注册-->
    <string name="register_input_pwd_again">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="register_pwd_not_equal">两次输入密码不一致，请重新输入</string>
    <string name="register_ing">注册中</string>

    <!--账号管理-->
    <string name="account_change_icon">更换头像</string>
    <string name="account_change_cover">更换个人封面</string>
    <string name="account_change_nickname">更改昵称</string>
    <string name="account_change_signature">更改个性签名</string>
    <string name="account_set_nickname">设置昵称</string>
    <string name="account_set_signature">设置签名</string>
    <string name="account_please_input_nickname">请输入您的昵称</string>
    <string name="account_please_input_signature">请输入您的个性签名</string>
    <string name="account_login_out">退出登录</string>
    <string name="account_set_success">设置成功</string>


    <!--设置-->
    <string name="setting_clean_cache">清除缓存</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_clean_cache_failed">清理缓存失败</string>

    <!--搜索-->
    <string name="search_hint">输入关键字搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clean_history">清空历史</string>
    <string name="search_dialog_title">清空搜索历史</string>
    <string name="search_dialog_content">确定要删除搜素历史吗？</string>

</resources>
