<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.activity.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="100dp"
            android:paddingEnd="30dp">

            <RelativeLayout
                android:id="@+id/mChooseIconRl"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                    android:id="@+id/mUserIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:qmui_border_width="0dp"
                    app:qmui_is_circle="true"
                    app:srcCompat="@mipmap/icon_android" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/icon_camera"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/mAccountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@null"
                android:drawableStart="@mipmap/icon_account_et"
                android:drawablePadding="@dimen/dp_10"
                android:ellipsize="end"
                android:hint="@string/login_input_username"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/color_main_text"
                android:textColorHint="@color/color_main_sub_text"
                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_view_line" />

            <EditText
                android:id="@+id/mPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:drawableStart="@mipmap/icon_password"
                android:drawablePadding="@dimen/dp_10"
                android:ellipsize="end"
                android:hint="@string/login_input_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/color_main_text"
                android:textColorHint="@color/color_main_sub_text"
                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_view_line" />

            <EditText
                android:id="@+id/mPasswordAgainEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:drawableStart="@mipmap/icon_password"
                android:drawablePadding="@dimen/dp_10"
                android:ellipsize="end"
                android:hint="@string/register_input_pwd_again"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/color_main_text"
                android:textColorHint="@color/color_main_sub_text"
                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_view_line" />

            <Button
                android:id="@+id/mRegisterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_login"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>


    <ImageView
        android:id="@+id/mCloseIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:src="@mipmap/icon_close" />

</RelativeLayout>